Prevent horizontal scrolling on pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,4 +12,5 @@
 body {
   color: #fafafa;
   background-color: #0b0b0b;
+  overflow-x: hidden;
 }
